--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -264,7 +264,7 @@ header {
     transition: var(--transtion);
 }
 
-.course:hover{
+.course:hover {
     background: transparent;
     border-color: var(--color-primary);
 }
@@ -281,18 +281,18 @@ header {
 
 /*!======================= FAQs ====================*/
 
-.faqs{
+.faqs {
     background: var(--color-bg1);
     box-shadow: inset 0 0 3rem rgba(0, 0, 0, 0.5);
 }
 
-.faqs__container{
+.faqs__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
 }
 
-.faq{
+.faq {
     padding: 2rem;
     display: flex;
     align-items: center;
@@ -302,21 +302,70 @@ header {
     cursor: pointer;
 }
 
-.faq h4{
+.faq h4 {
     font-size: 1rem;
     line-height: 2.2;
 }
 
-.faq__icon{
+.faq__icon {
     align-self: flex-start;
     font-size: 1.2rem;
 }
 
-.faq p{
+.faq p {
     margin-top: 0.8rem;
     display: none;
 }
 
-.faq.open p{
+.faq.open p {
     display: block;
+}
+
+
+/*!======================= Testimonial ====================*/
+
+.testimonials__container {
+    overflow-x: hidden;
+    position: relative;
+    margin-bottom: 5rem;
+}
+
+.testimonial {
+    padding-top: 2rem;
+}
+
+.avatar {
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto 1rem;
+    border: 1rem solid var(--color-bg1);
+}
+
+.tetimonial__info {
+    text-align: center;
+}
+
+.testimonial__body {
+    background: var(--color-primary);
+    padding: 2rem;
+    margin-top: 3rem;
+    position: relative;
+}
+
+.testimonial__body::before {
+    content: "";
+    display: block;
+    background: linear-gradient(135deg,
+            transparent,
+            var(--color-primary),
+            var(--color-primary),
+            var(--color-primary));
+    width: 3rem;
+    height: 3rem;
+    position: absolute;
+    left: 50%;
+    top: -1.5rem;
+    transform: rotate(45deg);
 }
