Responsive design for phones

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -514,50 +514,137 @@ footer ul li a:hover {
         margin-bottom: 4rem;
     }
 
-    .header__continer{
+    .header__continer {
         gap: 0;
         padding-bottom: 3rem;
     }
 
     /*?======================= CATEGORIES ====================*/
 
-    .categories{
+    .categories {
         height: auto;
     }
 
-    .categories__container{
+    .categories__container {
         grid-template-columns: 1fr;
         gap: 3rem;
     }
 
-    .categories__left{
+    .categories__left {
         margin-right: 0;
     }
 
     /*?======================= POPULAR COURSES ====================*/
 
-    .courses{
+    .courses {
         margin-top: 0;
     }
 
-    .courses__container{
+    .courses__container {
         grid-template-columns: 1fr 1fr;
     }
 
     /*?======================= FAQs ====================*/
 
-    .faqs__container{
+    .faqs__container {
         grid-template-columns: 1fr;
     }
 
-    .faq{
+    .faq {
         padding: 1.5rem;
     }
 
     /*?======================= FOOTER ====================*/
 
-    .footer__container{
+    .footer__container {
         grid-template-columns: 1fr 1fr;
+    }
+
+}
+
+/*!======================= PHONES MEDIA QUERIES ====================*/
+
+@media screen and (max-width: 600px) {
+    .container {
+        width: var(--container-width-sm);
+    }
+
+    /*?======================= NAVBAR ====================*/
+
+    .nav__menu {
+        right: 3%;
+    }
+
+    /*?======================= HEADER ====================*/
+
+    header {
+        height: 100vh;
+    }
+
+    .header__continer {
+        grid-template-columns: 1fr;
+        text-align: center;
+        margin-top: 0;
+    }
+
+    .header__left p {
+        margin-bottom: 1.3rem;
+    }
+
+    /*?======================= CATEGORIES ====================*/
+
+    .categories__right {
+        grid-template-columns: 1fr 1fr;
+        gap: 0.7rem;
+    }
+
+    .category {
+        padding: 1rem;
+        border-radius: 1rem;
+    }
+
+    .category__icon {
+        margin-top: 4px;
+        padding: 0.4rem;
+        display: inline-block;
+    }
+
+    .category h5 {
+        margin: 1rem 0 1rem;
+        font-size: 0.75rem;
+    }
+
+    .category p {
+        font-size: 0.75rem;
+    }
+
+    /*?======================= POPULAR COURSES ====================*/
+
+    .courses__container{
+        grid-template-columns: 1fr;
+    }
+
+
+    /*?======================= TESTIMONIALS ====================*/
+
+    .testimonial__body{
+        padding: 1.2rem;
+    }
+
+    /*?======================= FOOTER ====================*/
+
+    .footer__container{
+        grid-template-columns: 1fr;
+        text-align: center;
+        gap: 2rem;
+    }
+
+    .footer__1 p{
+        margin: 1rem auto;
+    }
+
+    .footer__socials{
+        justify-content: center;
     }
 
 }
